--- a/src/gourl/gourl/templates/gourl/index.html
+++ b/src/gourl/gourl/templates/gourl/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
+{% extends "gourl/base.html" %}
 
-<head>
-<meta charset="utf8">
-<title>GoUrl</title>
-</head>
+{% block title %}
+Go URL List
+{% endblock title %}
 
-<body>
-Existing Go URLs:
+{% block content %}
 
 <table>
 {% for url in urls %}
@@ -18,6 +15,5 @@ Existing Go URLs:
     </td></tr>
 {% endfor %}
 </table>
-</body>
 
-</html>
+{% endblock content %}
