--- a/src/gourl/templates/gourl/add.html
+++ b/src/gourl/templates/gourl/add.html
@@ -9,21 +9,15 @@ Add URL
 <form method="post">
     {% csrf_token %}
     <table>
-        <tr>
-            <td>Name:</td>
-            <td><input type="text" name="name" value="{{name}}"/></td>
-        </tr>
-        <tr>
-            <td>URL:</td>
-            <td><input type="text" name="url" value="{{url}}"/></td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>
-                <input type="submit" name="submit" value="Add" />
-                <input type="submit" name="cancel" value="Cancel"/>
-            </td>
-        </tr>
+    {{ form.as_table }}
+    <tr>
+        <td>&nbsp;</td>
+        <td>
+            <input type="submit" name="submit" value="Add" />
+            <input type="button" name="cancel" value="Cancel"
+                onclick="window.location='{{ cancel_redirect_url }}'" />
+        </td>
+    </tr>
     </table>
 </form>
 
