--- a/src/gourl/templates/gourl/base.html
+++ b/src/gourl/templates/gourl/base.html
@@ -1,26 +1,37 @@
+{% load static from staticfiles %}
+{% load i18n %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-<meta charset="utf8">
-<title>GoUrl</title>
+    <title>GoURL</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    {% if USE_CDNS %}
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" />
+    {% else %}
+    <link rel="stylesheet" href="{% static "gourl/bootstrap-3.1.1/css/bootstrap.css" %}" />
+    <link rel="stylesheet" href="{% static "gourl/bootstrap-3.1.1/css/bootstrap-theme.css" %}" />
+    {% endif %}
 </head>
 
 <body>
+    {% block content %}
+    {% endblock content %}
 
-<h1>{% block title %}GoUrl{% endblock title %}</h1>
+    {% if USE_CDNS %}
+    <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    {% else %}
+    <script src="{% static "gourl/jquery-2.1.0.js" %}" ></script>
+    <script src="{% static "gourl/bootstrap-3.1.1/js/bootstrap.js" %}" ></script>
+    {% endif %}
 
-{% if error %}
-<div>
-{{ error }}
-</div>
-{% endif %}
-
-<div>
-{% block content %}
-{% endblock content %}
-</div>
-
-</body>
-
+  </body>
 </html>
