--- a/src/gourl/templates/gourl/add.html
+++ b/src/gourl/templates/gourl/add.html
@@ -1,22 +1,11 @@
 {% extends "gourl/base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 
 <div class="container">
-    <form method="post">
-        {% csrf_token %}
-        <table>
-        {{ form.as_table }}
-        <tr>
-            <td>&nbsp;</td>
-            <td>
-                <input type="submit" name="submit" value="Add" />
-                <input type="button" name="cancel" value="Cancel"
-                    onclick="window.location='{{ cancel_redirect_url }}'" />
-            </td>
-        </tr>
-        </table>
-    </form>
+{% crispy form %}
 </div>
 
 {% endblock content %}
