base.html: fix unclosed div tag

--- a/src/gourl/templates/gourl/base.html
+++ b/src/gourl/templates/gourl/base.html
@@ -43,7 +43,7 @@
                 <li><a href="#">{% trans "About" %}</a></li>
                 <li><a href="#">{% trans "Contact" %}</a></li>
             </ul>
-        <div>
+        </div>
     </div>
 </nav>
 
