--- a/src/gourl/templates/gourl/base.html
+++ b/src/gourl/templates/gourl/base.html
@@ -58,5 +58,8 @@
 <script src="{% static "gourl/bootstrap-3.1.1/js/bootstrap.js" %}" ></script>
 {% endif %}
 
+{% block page_suffix %}
+{% endblock page_suffix %}
+
 </body>
 </html>
