base.html: fix JQuery CDN URL to use same scheme as overall request

--- a/src/gourl/templates/gourl/base.html
+++ b/src/gourl/templates/gourl/base.html
@@ -51,7 +51,7 @@
 {% endblock content %}
 
 {% if USE_CDNS %}
-<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+<script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 {% else %}
 <script src="{% static "gourl/jquery-2.1.0.js" %}" ></script>
