--- a/src/gourl/templates/gourl/base.html
+++ b/src/gourl/templates/gourl/base.html
@@ -53,9 +53,11 @@
 {% if USE_CDNS %}
 <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
 {% else %}
 <script src="{% static "gourl/jquery-2.1.0.js" %}" ></script>
 <script src="{% static "gourl/bootstrap-3.1.1/js/bootstrap.js" %}" ></script>
+<script src="{% static "gourl/angular-1.2.14.js" %}" ></script>
 {% endif %}
 
 {% block page_suffix %}
